--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	padding-top: 5rem;
 	font-size: calc(10px + 2vmin);
 	color: white;
 }
